# uzu-test

./: .gitignore  README.md  api_benchmark.py  bench_run.py  benchmark_config.json  benchmark_prompts.py  benchmark_report_10runs.md  benchmark_report_1runs.md  benchmark_report_2runs.md  benchmark_structured.py  benchmark_usage.md  debug_prompts.py  plan  plan.md  pytorch_server.py  server_manager.py  subprocess_benchmark.py  test_uzu_only.py  uzu_comprehensive_benchmark_analysis_20250718.md
benchmark/: pyproject.toml
output/: api_benchmark_results_1runs_quick_20250718_142719.json  api_benchmark_results_1runs_quick_20250718_143213.json  api_benchmark_results_1runs_quick_20250718_143930.json  api_benchmark_results_1runs_quick_20250718_170903.json  api_benchmark_results_3runs_20250718_153607.json  api_benchmark_results_3runs_20250718_162226.json  api_benchmark_results_3runs_20250718_171920.json  api_benchmark_results_3runs_20250718_211148.json  subprocess_benchmark_results_1runs_quick_20250718_170816.json  subprocess_benchmark_results_3runs_20250718_214515.json
report/: api_benchmark_report_1runs_quick_20250718_142719.md  api_benchmark_report_1runs_quick_20250718_143213.md  api_benchmark_report_1runs_quick_20250718_143930.md  api_benchmark_report_1runs_quick_20250718_170903.md  api_benchmark_report_3runs_20250718_153607.md  api_benchmark_report_3runs_20250718_171920.md  api_benchmark_report_3runs_20250718_211148.md  benchmark_report_1runs_quick_20250718_141627.md  benchmark_report_1runs_quick_20250718_144302.md  benchmark_report_1runs_quick_20250718_145152.md  benchmark_report_1runs_quick_20250718_161600.md  (+4 more)
