[project]
name = "uzu-benchmark"
version = "0.1.0"
description = "AI Inference Engine Performance Benchmark"
requires-python = ">=3.9"
dependencies = [
    # PyTorch 및 Transformers 관련
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "huggingface_hub>=0.16.0",
    "accelerate>=0.20.0",
    
    # 웹 서버 및 API 관련 (pytorch_server.py용)
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    
    # 데이터 처리 및 분석
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    
    # 시각화
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    
    # 시스템 및 네트워크
    "psutil>=5.9.0",
    "requests>=2.31.0",
    
    # 유틸리티
    "tqdm>=4.65.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Hatchling 빌드 설정 - 프로젝트 루트의 파일들 포함
[tool.hatch.build.targets.wheel]
include = [
    "../*.py",
    "../benchmark_config.json",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
] 